# petridish

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
etc/ci/: before_deploy.sh
examples/: diagnostics.rs
src/: cache.rs  config.rs  config2.rs  error.rs  lib.rs  literal_value.rs  main.rs  prompt.rs  render.rs  repository.rs  source.rs
tests/: test_render.rs
tests/templates/{{ project }}/{{ dir_name }}/: {{ inner }}.txt
