[package]
name = "petridish"
version = "0.4.0"
edition = "2021"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
categories = ["command-line-utilities", "template-engine"]
description = "A command-line utility that creates project layout."
repository = "https://github.com/petridish-dev/petridish"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tera = "1"
regex = "1"

[dev-dependencies]
serde_test = "1"
