[package]
name = "petridish"
version = "0.6.1"
edition = "2021"
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
categories = ["command-line-utilities", "template-engine"]
description = "A command-line utility that creates project layout."
repository = "https://github.com/petridish-dev/petridish"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tera = "1"
regex = "1"
tempfile = "3.8"
walkdir = "2.3"
clap = { version = "3", features = ["derive"] }
inquire = "0.3.0"
enum_dispatch = "0.3"
thiserror = "1"
anyhow = "1"
dirs = "4"
git2 = { version = "0.14", features = ["vendored-openssl"] }
termimad = "0.20.2"
crossterm = "0.23"
tabled = { version = "0.7", features = ["color"] }

[dev-dependencies]
serde_json = "1.0"
